# 3D-Surface-Visualizer-and-Optimizer

./: CMakeLists.txt  EquationParser.cpp  EquationParser.h  GUIManager.cpp  GUIManager.h  README.md  build.sh  main.cpp  main_equation_gui.cpp  run.bat
Research/: index.html
include/: Optimizer.h  Point3D.h  Surface.h  Visualizer.h
src/: Optimizer.cpp  Point3D.cpp  Surface.cpp  Visualizer.cpp
